--- a/css/app-2022.css
+++ b/css/app-2022.css
@@ -1,4 +1,10 @@
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap');
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+    html { font-family: 'Inter var', sans-serif; }
+}
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -61,7 +67,7 @@ script {
  *    user zoom.
  */
 html {
-    font-family: "Inter V";
+    font-family: "sans-serif";
     /* 1 */
     -ms-text-size-adjust: 100%;
     /* 2 */
@@ -372,10 +378,10 @@ body {
 
 body {
     background: white;
-    color: #222222;
+    color: #000000;
     padding: 0;
     margin: 0;
-    font-family: "Inter V", sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 300;
     font-style: normal;
     line-height: 1;
@@ -480,7 +486,7 @@ td {
 
 /* Default Link Styles */
 a {
-    color: #222222;
+    color: #000000;
     text-decoration: none;
     line-height: inherit; }
 a:hover, a:focus {
@@ -502,10 +508,10 @@ p aside {
 
 /* Default header styles */
 h1, h2, h3, #archive .grid a .day, h4, h5, h6, #archive .grid a .month {
-    font-family: "Inter V", sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 300;
     font-style: normal;
-    color: #222222;
+    color: #000000;
     text-rendering: optimizeLegibility;
     margin-top: 0;
     margin-bottom: 0.1em;
@@ -611,7 +617,7 @@ abbr,
 acronym {
     text-transform: uppercase;
     font-size: 90%;
-    color: #222222;
+    color: #000000;
     border-bottom: 1px dotted #dddddd;
     cursor: help; }
 
@@ -1732,7 +1738,7 @@ th.hide-for-touch {
     margin: 0; }
 .top-bar .name h1 a {
     font-weight: 300;
-    color: #222222;
+    color: #000000;
     width: 50%;
     display: block;
     padding: 0 15px; }
@@ -1741,7 +1747,7 @@ th.hide-for-touch {
     right: 0;
     top: 0; }
 .top-bar .toggle-topbar a {
-    color: #222222;
+    color: #000000;
     text-transform: uppercase;
     font-size: 0.8125em;
     font-weight: bold;
@@ -1806,7 +1812,7 @@ th.hide-for-touch {
 .top-bar-section ul li > a {
     display: block;
     width: 100%;
-    color: #222222;
+    color: #000000;
     padding: 12px 0 12px 0;
     padding-left: 15px;
     font-size: 0.8125em;
@@ -1875,7 +1881,7 @@ th.hide-for-touch {
 .top-bar-section .dropdown li.title h5 {
     margin-bottom: 0; }
 .top-bar-section .dropdown li.title h5 a {
-    color: #222222;
+    color: #000000;
     line-height: 22.5px;
     display: block; }
 .top-bar-section .dropdown label {
@@ -2031,7 +2037,7 @@ button, .button {
     padding-bottom: 0.8125em;
     padding-left: 1.5em;
     font-size: 1em;
-    background-color: #222222;
+    background-color: #000000;
     border-color: #090909;
     color: white; }
 button:hover, button:focus, .button:hover, .button:focus {
@@ -2091,7 +2097,7 @@ button.right-align, .button.right-align {
     text-align: right;
     padding-right: 0.75em; }
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
-    background-color: #222222;
+    background-color: #000000;
     border-color: #090909;
     color: white;
     cursor: default;
@@ -2103,7 +2109,7 @@ button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[dis
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
     color: white; }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-    background-color: #222222; }
+    background-color: #000000; }
 button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
     background-color: #f06819;
     border-color: #c9520d;
@@ -3642,7 +3648,7 @@ section#form h1 {
     min-width: 320px !important;
     /*width: 600px !important;*/
     background-color: #FFFFFF;
-    font-family: "Inter V";
+    font-family: "Inter";
     float: none !important;
 }
 
@@ -3672,7 +3678,7 @@ section#form h1 {
     min-width: 320px !important;
     width: 414px !important;
     background-color: #FFFFFF;
-    font-family: "Inter V";
+    font-family: "Inter";
 }
 #mktoForm_3840 .mktoFormRow, #mktoForm_3749 .mktoFormRow {
     margin: 10px; }
@@ -3710,7 +3716,7 @@ section#form h1 {
     padding-top: 10px;
     font-weight: 400;
     font-size: 16px;
-    font-family: "Inter V";
+    font-family: "Inter";
 }
 #mktoForm_3840 .mktoFormRow input, #mktoForm_3749 .mktoFormRow input {
     padding: 10px;
@@ -3759,7 +3765,7 @@ section#form h1 {
     font-size:16px;
     font-weight:bold;
     font-style:normal;
-    font-family: "Inter V";
+    font-family: "Inter";
     height: 40px;
     width:160px;
     text-decoration:none;
@@ -3824,7 +3830,7 @@ section {
 
 .speakerList .header h2{
     color: #fff;
-    font-family: "Inter V", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 
@@ -3846,20 +3852,25 @@ section {
     color: #47A1AD; }
 
 #intro {
-    color: #222222;
+    color: #000000;
     background: #FFFFFF;
     background-size: auto;
     border-radius: 0; }
 #intro h1 {
-    font-family: 'Bitter', serif;
+    font-family: 'Bitter', sans-serif;
+    font-weight: 700;
 }
-intro h6 {
-    font-family: "Inter V";
+#intro h6 {
+    font-family: "Inter", sans-serif;
     font-weight: 630;
 }
-#intro h2, #intro h3, #intro #archive .grid a .day, #archive .grid a #intro .day, #intro h4, #intro h5, #intro h6, #intro #archive .grid a .month, #archive .grid a #intro .month, #intro .subheader, #intro p, #intro blockquote, #intro a, #intro small, #intro #archive .grid a .year, #archive .grid a #intro .year {
-    color: black;
-    font-family: "Inter V";
+#intro p{
+    font-family: "Inter", sans-serif;
+    font-weight: 360;
+    font-size:0.90em;
+}
+#intro h2, #intro h3, #intro #archive .grid a .day, #archive .grid a #intro .day, #intro h4, #intro h5, #intro #archive .grid a .month, #archive .grid a #intro .month, #intro .subheader, #intro p, #intro blockquote, #intro a, #intro small, #intro #archive .grid a .year, #archive .grid a #intro .year {
+    font-family: "Inter", sans-serif;
     font-weight: 360;
 }
 #intro code, #intro abbr, #intro acronym {
@@ -4028,7 +4039,7 @@ intro h6 {
     color: white;
     padding: 0.25em;
     margin-bottom: 0.25em;
-    font-family: "Inter V";
+    font-family: "Inter";
     font-weight: 630;
 }
 #intro .actions a h4:hover, #intro .actions a h4:focus {
@@ -4043,15 +4054,15 @@ intro h6 {
     line-height: 2.5; }
 
 #agenda {
-    color: #222222;
+    color: #000000;
     background: #6B9E78;
     padding: 1.8rem 0;}
 #agenda h1, #agenda h2, #agenda h3, #agenda #archive .grid a .day, #archive .grid a #agenda .day, #agenda h4, #agenda h5, #agenda h6, #agenda #archive .grid a .month, #archive .grid a #agenda .month, #agenda .subheader, #agenda p, #agenda blockquote, #agenda small, #agenda #archive .grid a .year, #archive .grid a #agenda .year {
     color: #000000;
-    font-family: "Inter V";
+    font-family: "Inter";
 }
 #agenda h2 {
-    font-family: 'Bitter', serif;
+    font-family: 'Bitter', sans-serif;
 }
 #agenda a {
     color: white;
@@ -4153,7 +4164,7 @@ intro h6 {
     background: #000000;
 }
 #about h1, #about h2, #about h3, #about #archive .grid a .day, #archive .grid a #about .day, #about h4, #about h5, #about h6, #about #archive .grid a .month, #archive .grid a #about .month, #about .subheader, #about p, #about blockquote, #about a, #about small, #about #archive .grid a .year, #archive .grid a #about .year {
-    font-family: "Inter V";
+    font-family: "Inter";
     font-size: x-large;
     color: white;
 }
@@ -4162,7 +4173,7 @@ intro h6 {
 #about .social a {
     font-size: 1.2em;
     display: inline-block;
-    color: #222222;
+    color: #000000;
     background-color: white;
     border-radius: 50%;
     width: 1.5em;
@@ -4203,14 +4214,14 @@ intro h6 {
     text-align: right; }
 
 #archive {
-    color: #222222;
+    color: #000000;
     background: white url(../img/white-bg.png);
     background: url("../img/banner-white.png");
     background-position: center;
     background-size: cover;
     min-height: fit-content}
 #archive h1, #archive h2, #archive h3, #archive .grid a .day, #archive h4, #archive h5, #archive h6, #archive .grid a .month, #archive .subheader, #archive p, #archive blockquote, #archive a, #archive small, #archive .grid a .year {
-    color: #222222; }
+    color: #000000; }
 #archive code, #archive abbr, #archive acronym {
     color: black; }
 #archive .row {
@@ -4282,7 +4293,7 @@ a.vd-link {
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 30px;
-    color: #222222 !important;
+    color: #000000 !important;
 }
 
 #intro .actions p {
