[Rikkashini/Twinkle]Updated font styles for about section for 2022 edition page

--- a/css/app-2022.css
+++ b/css/app-2022.css
@@ -4163,9 +4163,13 @@ section {
     color: white;
     background: #000000;
 }
-#about h1, #about h2, #about h3, #about #archive .grid a .day, #archive .grid a #about .day, #about h4, #about h5, #about h6, #about #archive .grid a .month, #archive .grid a #about .month, #about .subheader, #about p, #about blockquote, #about a, #about small, #about #archive .grid a .year, #archive .grid a #about .year {
+#about h1, #about h2, #about h3, #about #archive .grid a .day, #archive .grid a #about .day, #about h5, #about h6, #about #archive .grid a .month, #archive .grid a #about .month, #about .subheader, #about p, #about blockquote, #about a, #about small, #about #archive .grid a .year, #archive .grid a #about .year {
     font-family: "Inter";
     font-size: x-large;
+}
+#about h4 {
+    font-family: "Inter";
+    font-weight: 630;
     color: white;
 }
 #about code, #about abbr, #about acronym {
